# GhostLoad

./: .gitignore  README.md
backend/config/: .env.example  deployments.php
backend/core/: .htaccess  AntiFingerprint.php  Bootstrap.php  Config.php  KeyDerivation.php  Logger.php  Obfuscator.php  Security.php  URLObfuscator.php
backend/public/: api.php
configs/: deployment.toml.example
loader/: Cargo.toml  build.rs
loader/.cargo/: config.toml
loader/src/: anti_debug.rs  api_hash.rs  crypto.rs  downloader.rs  encrypted_container.rs  executor.rs  main.rs  obfuscation.rs  persistence.rs  persistence_advanced.rs
loader/src/anti_analysis/: hardware.rs  mod.rs  sandbox.rs  vm.rs
tools/: encrypt_payload.py
